manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cloudsample 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsample
  template:
    metadata:
      labels:
        app: cloudsample 
    spec:
      containers:
        - name: cloudsample 
          image: cepgstapacr.azurecr.io/cloudsample
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /mnt/sample-99995709
            name: sample-99995709-volume
            readOnly: false
            subPath: sample-99995709
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: sample-99995709-volume
        persistentVolumeClaim:
          claimName: cepg-aa-std-pvc
      - name: application-properties
        configMap:
          name: sample-99995709-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
